# js8d

./: .gitignore  2025-09-26-resume.txt  ?_busy_timeout=10000&_journal_mode=WAL&_foreign_keys=on  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  REFACTOR_COMPLETE.md  TODO.md  config.yaml  docker-compose.yml  go.mod  go.sum  js8ctl  js8encode-linux-arm64
.github/workflows/: release.yml
cmd/js8ctl/: main.go
cmd/js8d/: daemon.go  handlers.go  main.go
cmd/js8encode/: main.go
configs/: config.docker.yaml  config.example.yaml  config.production.yaml  js8d.service
docs/: API.md  CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
libjs8dsp/: CMakeLists.txt  js8_encoder.cpp  js8_encoder.h  js8dsp.cpp  js8dsp.h  test_js8dsp.cpp
libjs8dsp/include/: baseline_computation.h  bp_decoder.h  js8_constants.h  js8_decoder.h  js8dsp.h  mock_fft.h  varicode.h
libjs8dsp/src/: baseline_computation.cpp  bp_decoder.cpp  js8_decoder.cpp  js8dsp_api.cpp  mock_fft.cpp  varicode.cpp
libjs8dsp/tests/: CMakeLists.txt  test_basic.cpp
pkg/audio/: audio.go  monitor.go
pkg/client/: client.go
pkg/config/: config.go  config_test.go
pkg/dsp/: js8_encoder.go  js8_encoder_test.go  js8dsp.go  js8dsp_cgo.go  js8dsp_test.go  varicode.go  varicode_test.go
pkg/engine/: engine.go  engine_test.go
pkg/hardware/: alsa.go.disabled  alsa_linux.go  alsa_types_linux.go  audio_darwin.go  audio_devices_linux.go  audio_fallback.go  audio_linux.go  buffer_pool.go  buffer_pool_test.go  coreaudio_darwin.go  gpio.go  hamlib_radio.go  hamlib_radio.go.disabled  hardware.go  hardware_test.go  mock.go  mock_radio.go  mock_test.go  radio.go
pkg/logging/: logger.go
pkg/protocol/: protocol.go  protocol_test.go
pkg/storage/: message_store.go  message_store_test.go  queries.go  queries_test.go
pkg/verbose/: verbose.go
scripts/: build-dist-simple.sh  build-dist.sh  install.sh  uninstall.sh
web/static/css/: main.css
web/static/js/: audio-visualizer.js  main.js  main_old.js  settings.js
web/templates/: index.html  settings.html
